Fix incorrect class name for gradle plugin metadata

--- a/src/main/resources/META-INF/gradle-plugins/carrotsearch.randomized-testing.properties
+++ b/src/main/resources/META-INF/gradle-plugins/carrotsearch.randomized-testing.properties
@@ -1,1 +1,1 @@
-implementation-class=com.carrotsearch.gradle.RandomizedTestingPlugin
+implementation-class=com.carrotsearch.gradle.junit4.RandomizedTestingPlugin
